[package]
name = "whambam"
version = "0.1.8"
edition = "2021"
description = "A simple CLI web performance testing tool"
authors = ["Stephen Harrison <stephen@harrison.org>"]
license = "MIT"
homepage = "https://whambam.dev"
repository = "https://github.com/cloudy-native/whambam.dev"
default-run = "whambam"
readme = "README.md"
keywords = ["performance", "web", "testing", "cli", "benchmark"]
categories = ["command-line-utilities"]

[[bin]]
name = "whambam"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
openssl = { version = "0.10", optional = true }

tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
indicatif = "0.17"
url = "2.4"
ratatui = "0.22.0"
crossterm = "0.27.0"
chrono = "0.4"
tui-logger = "0.9.6"
log = "0.4"
floating-duration = "0.1.2"
hdrhistogram = "7.5.2"

[features]
vendored-openssl = ["openssl/vendored"]

[package.metadata.release]
publish = false
sign-commit = false
sign-tag = false
pre-release-commit-message = "Release {{version}}"
tag-message = "Release {{version}}"
tag-name = "v{{version}}"

